# moomp

./: .env.deploy  .env.example  .gitignore  Dockerfile  README.md  chance.lua  docker-compose.deploy.yml  docker-compose.yml  main.py  pyproject.toml  seed.py  templates.py
.run/: moomp deploy.run.xml  telnet server.run.xml
commands/: __init__.py  base.py  build.py  copy.py  dig.py  logout.py  look.py  move.py  register.py  rename.py  say.py  take.py  warp.py  waypoint.py
commands/text/: base.py  build.py  copy.py  describe.py  dig.py  hide.py  logout.py  look.py  move.py  register.py  rename.py  say.py  take.py  warp.py  waypoint.py
consumers/: __init__.py  base.py  properties.py  room.py  script.py  speech.py
docker/: docker-compose.yml  entrypoint.sh
docker/mosquitto/: mosquitto.conf
entrypoints/: llm.py  mqtt.py  seed.py  telnet.py
middleware/: __init__.py  updater.py
migrations/: m000000001.py  m000000002.py
models/: __init__.py  account.py  character.py  events.py  instance.py  object.py  portal.py  roles.py  room.py  script.py  speech.py
seeds/: 1.json
services/: account.py  authn.py  character.py  character_test.py  instance.py  mqtt.py  object.py  object_test.py  portal.py  portal_test.py  room.py  room_test.py  script.py  session.py  speech.py  telnet.py
services/telnet/: auth_n.py  input.py  mqtt.py  telnet.py
templates/: text.py
templates/character/: character.templ  text.py  text.templ  welcome.templ
templates/colors/: text.json  text.py
templates/object/: object.templ  text.py
templates/portal/: portal.templ  text.py
templates/room/: room.templ  text.py  text.txt
templates/utils/authn/: authn.json  authn.py  config.py
templates/utils/text/: color.py  config.py  graphics.py  style.py  text.json  text.py
utils/: check.py  clean.py  color.py  colors.py  db.py  migrate.py  system.py  types.py
