[tool.poetry]
name = "moomp"
version = "0.1.0"
description = ""
authors = ["Robbie Byrd <me@robbiebyrd.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mongoengine = "^0.28.2"
rich = "^13.7.1"
pydantic = "^2.7.4"
blinker = "^1.8.2"
paho-mqtt = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
